# pasto-legal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  example_main.py  main.py  pyproject.toml  requirements.txt  run_output_example.py  run_streamlit.py  run_whatsapp.py  teste.py
.github/workflows/: develop.yml  prod.yml
app/: debug.py  main.py
app/agents/: __init__.py  analyst.py  analyst_agent.py  assistant.py  collector.py  easter_egg_agent.py  generic.py  generic_agent.py  main_agent.py  main_team.py  property_analyst_agent.py  property_manager_agent.py  question_answer_agent.py  sicar_agent.py
app/configs/: OLLAMA_LOCAL.md  models.py
app/database/: agno_db.py  database.py  knowledge_db.py  models.py  session.py
app/guardrails/: pii_detection_guardrail.py
app/hooks/: post_hooks.py  pre_hooks.py  teste_hooks.py  tool_hooks.py  validation_hooks.py
app/interfaces/: streamlit.py  streamlit_webapp.py
app/managers/: memory_manager.py
app/tools/: analysis_tools.py  analyst_tools.py  audioTTS.py  easter_eggs_tools.py  feedback_tools.py  gee_tools.py  info_tools.py  property_analyst_tools.py  property_crud_tools.py  property_manager_tools.py  sicar_tools.py  (+1 more)
debbuging/: pyproject.toml
debbuging/src/: debbug.py  main.py  service.py
debbuging/src/database/: session.py
debug/: .env.example  pyproject.toml
debug/src/: main.py  service.py
debug/src/components/: __init__.py  chat_panel.py  debug_panel.py  sidebar.py
debug/src/database/: session.py
debugging/: .env.example  pyproject.toml
docs/: README.md
experimental/: streamlit_webapp.py
tmp/: memory.db
(+54 files in other folders)
