[project]
name = "debugging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.10",
    "dotenv>=0.9.9",
    "paramiko<3.0.0",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sshtunnel>=0.4.0",
    "streamlit>=1.55.0",
]
